2001-01-22  Jeff Freedman  <jeff@amy.nerble.net>

	* Better reporting in Usecode function tracing.  Also, SETR now
	does a RTS as well in BLACK GATE.  This fixes the test for blocked
	gangplank.
	
2001-01-22  Max Horn  <max@quendi.de>
	* utils.c: fixed switch_slashes() on MacOS to properly work with absolute path's; 
	  changed U7mkdir() to call switch_slashes()
	* ucmachine.cc: changed printf to cout
	* lots-of-files: changed sprintf to snprintf (to prevent potential overflow bugs)
	* lots-of-files: added some using std:: directives and some some std:: prefixes

2001-01-22  Tristan Tarrant <nadir@users.sourceforge.net>
	* txtscroll.cc: pressing shift during scroll makes it faster

2001-01-21  Jeff Freedman  <jeff@amy.nerble.net>
	* In SI, treat SETR as a RTS as well.  Fixes infinite loop when
	trying to buy from armourer.

2001-01-21  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* cheat.cc, intrinsics.cc: fixed SI map. (somewhat)
	
2001-01-20  Jeff Freedman  <jeff@amy.nerble.net>
	* gamewin.cc: Bug fixes:  Theft, right-double-click, crash after
	Alagnar is killed

2001-01-19  Tristan Tarrant <nadir@users.sourceforge.net>
	* tools/u7shp.c: renamed. As per Ryan's request, the plugin now uses 
	  guides to identify the hotspot. Caveat: only the hotspot of the first 
	  frame is considered

2001-01-19  Ryan Nunn <triforce@merlin.net.au>
	* actors.*, exult.cc, gamewin.*, NEWS, gumps/*.* :
	  SI paperdolls in BG
	* gameclk.*, gamewin.h : Time now counts in minutes not per 15 minutes.
	  Also added timerate variable for potential cheat useage like the
	  originals.
	* audio/midi_drivers/win_midiout.* : Replaced all SDL calls with the
	  equivilant Win32 calls.

2001-01-18  Tristan Tarrant <nadir@users.sourceforge.net>
	* data/exult_logo.shp: removed spurious pixels

2001-01-18  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* iwin8.cc/h: removed SDL_video.h from iwin8.h

2001-01-17  Willem Jan Palenstijn <palenstijn@wanadoo.nl>